added to marketing site

--- a/mycelium/apps/marketing_site/templates/marketing_site/screenshots.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/screenshots.html
@@ -1,6 +1,6 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n generic_fields friendly_data_formatting  %}
-{% block title %}Screenshots - take a look at easy-to-use meets nonprofits!{% endblock %}
+{% block title %}Screenshots - see what easy to use for nonprofits looks like.{% endblock %}
 {% block description %}Watch a video interview with GoodCloud's CEO, and see how it helps nonprofits organize and run more easily!{% endblock %}
 
 {% block css %}{{block.super}}
@@ -64,17 +64,31 @@ $(function(){
 			</a>
 			</li>
 			<li>
-			<h4>Adding a donation</h4>
-			<div class="tn3 description">Simple and easy to add donations.</div>
-			<a href="{% media_url "images/screenshots/originals/add_donation.jpg" %}">
-				<img src="{% media_url "images/screenshots/thumbnails/add_donation.jpg" %}" 			title="Adding a donation"	alt="Simple and easy to add donations." />
-			</a>
-			</li>
-			<li>
 			<h4>Adding volunteer hours</h4>
 			<div class="tn3 description">Adding hours for volunteers couldn't get much simpler.</div>
 			<a href="{% media_url "images/screenshots/originals/add_volunteer_hours.jpg" %}">
 				<img src="{% media_url "images/screenshots/thumbnails/add_volunteer_hours.jpg" %}" 	title="Adding volunteer hours" alt="Adding hours for volunteers couldn't get much simpler." />
+			</a>
+			</li>
+			<li>
+			<h4>Remember each conversation</h4>
+			<div class="tn3 description">Now you can remember what what was said, with who, when. Conversations makes it simple to keep a history of interactions for your nonprofit.</div>
+			<a href="{% media_url "images/screenshots/originals/conversations_full.jpg" %}">
+				<img src="{% media_url "images/screenshots/thumbnails/conversations_full.jpg" %}" 			title="Remember each conversation"	alt="Now you can remember what what was said, with who, when. Conversations makes it simple to keep a history of interactions for your nonprofit." />
+			</a>
+			</li>			
+			<li>
+			<h4>Easy to add conversations</h4>
+			<div class="tn3 description">We designed conversations to be fast and easy - so you could type them in <i>while</i> you're on the phone, or just copy and paste an email.</div>
+			<a href="{% media_url "images/screenshots/originals/conversations_adding.jpg" %}">
+				<img src="{% media_url "images/screenshots/thumbnails/conversations_adding.jpg" %}" 			title="Easy to add conversations"	alt="We designed conversations to be fast and easy - so you could type them in while you're on the phone, or just copy and paste an email." />
+			</a>
+			</li>
+			<li>
+			<h4>Adding a donation</h4>
+			<div class="tn3 description">Simple and easy to add donations.</div>
+			<a href="{% media_url "images/screenshots/originals/add_donation.jpg" %}">
+				<img src="{% media_url "images/screenshots/thumbnails/add_donation.jpg" %}" 			title="Adding a donation"	alt="Simple and easy to add donations." />
 			</a>
 			</li>
 			<li>
