marketing site links and tweaks

--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -21,12 +21,12 @@
 		<p>Each year, we set financial targets, goals to grow and sustain GoodCloud. When we hit those targets, the organizations that got us there share in our profits.</p>
 
 		<div class="tab_subheading">We volunteer.</div>
-		<p>Maybe even at your organization! GoodCloud employees are required to volunteer at least 10 hours a month with nonprofits, and that time is paid. Want to see if we've been slacking? See our <a href="https://spreadsheets.google.com/spreadsheet/ccc?key=0AtDfuCG0bl8rdEdia2NzZk1uSW1ZTmxzaVRORVhaTWc" target="_blank">volunteer hours log</a>!</p>
+		<p>Maybe even at your organization! GoodCloud employees are required to volunteer at one full day's time each month with nonprofits, and that time is paid. Want to see if we've been slacking? See our <a href="https://spreadsheets.google.com/spreadsheet/pub?hl=en_US&hl=en_US&key=0AtDfuCG0bl8rdEdia2NzZk1uSW1ZTmxzaVRORVhaTWc&output=html" target="_blank">volunteer hours log</a>!</p>
 
 		<div class="tab_subheading">We donate.</div>
 		<p>GoodCloud employees also recieve stipends to donate to the nonprofits they love.</p><br/>
 
-		<p>We do things a bit differently than some large corporations you may have heard of. We like it that way, and we think you will too.</p>
+		<p>We're committed to directly supporting nonprofits both with our work, and with our lives out in our own communities. We believe that each of us is responsible for sustaining and growing the communities we want to live in, and we're proud that GoodCloud helps in those goals.</p>
 
 
 	</div>
