added release news

--- a/mycelium/apps/dashboard/templates/dashboard/_goodcloud_news.html
+++ b/mycelium/apps/dashboard/templates/dashboard/_goodcloud_news.html
@@ -1,5 +1,13 @@
 <column_content class="plain_text news">
 <news_story>
+<span class="date">July 2, 2011</span>
+<span class="story_body">Conversations are here! Now, from each person's page, you can add notes or a transcript from any conversation you have with them.  Remembering a donor's history just got a lot easier. :)</span>
+</news_story>
+<news_story>
+<span class="date">July 1, 2011</span>
+<span class="story_body">Upgrade schedule.  We now have an upgrade schedule set.  GoodCloud will be upgraded each week, on Saturday nights, between 8 and 9 PST.</span>
+</news_story>
+<news_story>
 <span class="date">June 16, 2011</span>
 <span class="story_body">Spreadsheets have arrived! You can now easily create and download spreadsheets of your data, using the spreadsheet link up top.</span>
 </news_story>
