--- a/mycelium/apps/dashboard/templates/dashboard/_goodcloud_news.html
+++ b/mycelium/apps/dashboard/templates/dashboard/_goodcloud_news.html
@@ -1,7 +1,7 @@
 <column_content class="plain_text news">
 <news_story>
 <span class="date">July 2, 2011</span>
-<span class="story_body">Conversations are here! Now, from each person's page, you can add notes or a transcript from any conversation you have with them.  Remembering a donor's history just got a lot easier. :)</span>
+<span class="story_body">Conversations and Birthdays are here! Now, from each person's page, you can add notes or a transcript from any conversation you have with them.  Remembering a donor's history just got a lot easier. :)<br/><br/>We've also added birthdays for each person. Birthdays are searchable for groups, and will also show up here on the dashboard!</span>
 </news_story>
 <news_story>
 <span class="date">July 1, 2011</span>
